[gd_scene load_steps=12 format=3 uid="uid://coas4vpmfcaqr"]

[ext_resource type="Script" uid="uid://xkoek42dvitj" path="res://Boss/Boss Attacks/Laser/boss_laser.gd" id="1_e5gvd"]
[ext_resource type="Texture2D" uid="uid://c1mq5gkile05a" path="res://Boss/Boss Attacks/Laser/ProjectilesBoss_laserBeam-Sheet.png" id="2_fhoex"]
[ext_resource type="AudioStream" uid="uid://5rgreyqoq6vu" path="res://SFX/Boss Laser Attack.wav" id="3_e5gvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xll6h"]
size = Vector2(110, 641)

[sub_resource type="AtlasTexture" id="AtlasTexture_86wd3"]
atlas = ExtResource("2_fhoex")
region = Rect2(448, 0, 112, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5gvd"]
atlas = ExtResource("2_fhoex")
region = Rect2(560, 0, 112, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhoex"]
atlas = ExtResource("2_fhoex")
region = Rect2(0, 0, 112, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lhk"]
atlas = ExtResource("2_fhoex")
region = Rect2(112, 0, 112, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_xll6h"]
atlas = ExtResource("2_fhoex")
region = Rect2(224, 0, 112, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wteam"]
atlas = ExtResource("2_fhoex")
region = Rect2(336, 0, 112, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_slmmi"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_86wd3")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_e5gvd")
}],
"loop": false,
"name": &"laser",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_fhoex")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_57lhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xll6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wteam")
}],
"loop": false,
"name": &"warming",
"speed": 5.0
}]

[node name="Boss_Laser" type="Node2D" groups=["enemy_bullet"]]
position = Vector2(0, 320)
script = ExtResource("1_e5gvd")

[node name="HitBox" type="Area2D" parent="." groups=["enemy_bullet"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" groups=["enemy_bullet"]]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_xll6h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_slmmi")
animation = &"laser"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e5gvd")
autoplay = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
